--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "authors": [
         {
             "name": "Lucas Seinfeld"
+        },
+        {
+            "name": "Thomas Payer"
         }
     ],
     "minimum-stability": "dev",
@@ -13,15 +16,13 @@
     "require": {
         "php": "^7.1",
         "kiwi-suite/contract": "dev-develop",
-        "zendframework/zend-expressive-platesrenderer": "^2.0.0-dev",
-        "zendframework/zend-expressive-helpers": "^5.0.0-dev"
+        "zendframework/zend-expressive-platesrenderer": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0.6",
         "friendsofphp/php-cs-fixer": "^2.5",
         "php-coveralls/php-coveralls": "^2.0",
-        "kiwi-suite/servicemanager": "dev-develop",
-        "kiwi-suite/application": "dev-develop"
+        "kiwi-suite/servicemanager": "dev-develop"
     },
     "autoload": {
         "psr-4": {
