--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         "zendframework/zend-expressive-platesrenderer": "^2.0"
     },
     "require-dev": {
+        "ixocreate/coding-standard": "^1.0.0",
         "phpunit/phpunit": "^6.0.6",
-        "friendsofphp/php-cs-fixer": "^2.5",
         "php-coveralls/php-coveralls": "^2.0",
-        "kiwi-suite/servicemanager": "dev-develop"
+        "ixocreate/servicemanager": "dev-develop"
     },
     "autoload": {
         "psr-4": {
@@ -32,6 +32,6 @@
         }
     },
     "scripts": {
-        "fix-cs": "vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix"
+        "fix-cs": "vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix --config vendor/ixocreate/coding-standard/.php_cs"
     }
 }
