--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.1",
-        "ixocreate/contract": "dev-develop",
+        "ixocreate/contract": "=1.0.0-alpha1",
+        "ixocreate/servicemanager": "=1.0.0-alpha1",
         "zendframework/zend-expressive-platesrenderer": "^2.0"
     },
     "require-dev": {
         "ixocreate/coding-standard": "^1.0.0",
         "phpunit/phpunit": "^6.0.6",
-        "php-coveralls/php-coveralls": "^2.0",
-        "ixocreate/servicemanager": "dev-develop"
+        "php-coveralls/php-coveralls": "^2.0"
     },
     "autoload": {
         "psr-4": {
