--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.1",
-        "ixocreate/contract": "=1.0.0-alpha1",
-        "ixocreate/servicemanager": "=1.0.0-alpha1",
+        "ixocreate/contract": "dev-develop",
+        "ixocreate/servicemanager": "dev-develop",
         "zendframework/zend-expressive-platesrenderer": "^2.0"
     },
     "require-dev": {
