--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
         "zendframework/zend-expressive-platesrenderer": "^2.0"
     },
     "require-dev": {
-        "ixocreate/coding-standard": "^1.0.0",
-        "phpunit/phpunit": "^6.0.6",
-        "php-coveralls/php-coveralls": "^2.0"
+        "ixocreate/coding-standard": "^1.0.1",
+        "php-coveralls/php-coveralls": "^2.1",
+        "phpunit/phpunit": "^6.0.6"
     },
     "autoload": {
         "psr-4": {
