--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ixocreate/template",
+    "name": "ixocreate/template-package",
     "description": "Plates integration for IXOCREATE",
     "license": "MIT",
     "type": "library",
