--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "ixocreate/template",
-    "description": "Plates integration for IXOCREATE",
+    "name": "ixocreate/template-package",
+    "description": "IXOCREATE Template Package",
     "license": "MIT",
     "type": "library",
     "authors": [
@@ -12,24 +12,23 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.1",
-        "ixocreate/contract": "dev-develop",
-        "ixocreate/servicemanager": "dev-develop",
+        "ixocreate/application": "dev-consolidate",
         "zendframework/zend-expressive-platesrenderer": "^2.0"
     },
     "require-dev": {
-        "ixocreate/coding-standard": "^1.0.1",
+        "ixocreate/coding-standard": "^1.0",
         "php-coveralls/php-coveralls": "^2.1",
         "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "psr-4": {
-            "Ixocreate\\Template\\": "src/"
+            "Ixocreate\\Package\\Template\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "IxocreateMisc\\Template\\": "tests/misc/",
-            "IxocreateTest\\Template\\": "tests/src/"
+            "Ixocreate\\Misc\\Template\\": "tests/misc/",
+            "Ixocreate\\Test\\Template\\": "tests/src/"
         }
     },
     "scripts": {
