--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,9 @@
             "Ixocreate\\Test\\Template\\": "tests/src/"
         }
     },
+    "config": {
+        "sort-packages": true
+    },
     "scripts": {
         "fix-cs": "vendor/friendsofphp/php-cs-fixer/php-cs-fixer fix --config vendor/ixocreate/coding-standard/.php_cs"
     }
