--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "ixocreate/application": "^0.1",
+        "ixocreate/application": "~0.1.0|~0.2.0",
         "zendframework/zend-expressive-platesrenderer": "^2.0"
     },
     "require-dev": {
