--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "ixocreate/application": "~0.1.0|~0.2.0",
-        "zendframework/zend-expressive-platesrenderer": "^2.0"
+        "php": "^7.2 || ^8.0",
+        "ixocreate/application": "~0.3.0",
+        "mezzio/mezzio-platesrenderer": "^2.2"
     },
     "require-dev": {
         "ixocreate/coding-standard": "^2.0",
-        "ixocreate/test": "dev-develop"
+        "ixocreate/test": "^0.1.0"
     },
     "autoload": {
         "psr-4": {
