--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
             "role": "Developer"
         }
     ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": "^7.2 || ^8.0",
-        "ixocreate/application": "dev-dev-develop",
+        "ixocreate/application": "dev-develop",
         "mezzio/mezzio-platesrenderer": "^2.2"
     },
     "require-dev": {
