--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,14 @@
             "role": "Developer"
         }
     ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "require": {
         "php": "^7.2 || ^8.0",
-        "ixocreate/application": "dev-develop",
+        "ixocreate/application": "^0.3.0",
         "mezzio/mezzio-platesrenderer": "^2.2"
     },
     "require-dev": {
         "ixocreate/coding-standard": "^2.0",
-        "ixocreate/test": "^0.1.0"
+        "ixocreate/test": "^0.2.0"
     },
     "autoload": {
         "psr-4": {
